# cmake_minimum_required(VERSION 3.12)

# project(CMakeExampleProject)

# set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS OFF)
# set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         ${CMAKE_SOURCE_DIR}/build                    )
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release/bin)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug/bin  )

# if (MSVC)
#    add_compile_options(/W4 /WX)
# else()
#    add_compile_options(-pedantic-errors -Wall -Wextra -Werror)
# endif()

# add_subdirectory(../libraries/fmt)
# include_directories(${CMAKE_SOURCE_DIR}/../libraries/fmt/include)

add_executable(prfig14_01  fig14_01.cpp)
add_executable(prfig14_02  fig14_02.cpp)
add_executable(prfig14_03  fig14_03.cpp )
add_executable(prfig14_04  fig14_04.cpp)
add_executable(prfig14_05  fig14_05.cpp)
add_executable(prfig14_06  fig14_06.cpp)
add_executable(prfig14_07  fig14_07.cpp)
add_executable(prfig14_08  fig14_08.cpp)
add_executable(prfig14_09  fig14_09.cpp)
add_executable(prfig14_10  fig14_10.cpp)
add_executable(prfig14_11  fig14_11.cpp)
add_executable(prfig14_12  fig14_12.cpp)
add_executable(prfig14_13  fig14_13.cpp)
add_executable(prfig14_14  fig14_14.cpp)
add_executable(prfig14_15  fig14_15.cpp)
add_executable(prfig14_16  fig14_16.cpp)
add_executable(prfig14_17  fig14_17.cpp)
add_executable(prfig14_18  fig14_18.cpp)

target_link_libraries(prfig14_01  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_02  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_03  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_04  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_05  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_06  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_07  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_08  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_09  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_10  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_11  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_12  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_13  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_14  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_15  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_16  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_17  PRIVATE   fmt::fmt )
target_link_libraries(prfig14_18  PRIVATE   fmt::fmt )

# include_directories(${CMAKE_SOURCE_DIR}/include)

# add_subdirectory(src)
