
# add_subdirectory(../libraries/fmt)


add_subdirectory(fig15_01-02)
# add_subdirectory(fig15_11-12)

# add_executable(prfig15_01  fig15_01.cpp)
# add_executable(prfig15_02  fig15_02.cpp)
add_executable(prfig15_03  fig15_03.cpp )
add_executable(prfig15_04  fig15_04.cpp)
add_executable(prfig15_05  fig15_05.cpp)
add_executable(prfig15_06  fig15_06.cpp)
add_executable(prfig15_07  fig15_07.cpp)
add_executable(prfig15_08  fig15_08.cpp)
add_executable(prfig15_09  fig15_09.cpp)
add_executable(prfig15_10  fig15_10.cpp)
# add_executable(prfig15_11  fig15_11.cpp)
# add_executable(prfig15_12  fig15_12.cpp)
add_executable(prfig15_13  fig15_13.cpp)
add_executable(prfig15_14  fig15_14.cpp)
add_executable(prfig15_15  fig15_15.cpp)
add_executable(prfig15_16  fig15_16.cpp)
add_executable(prfig15_17  fig15_17.cpp)
add_executable(prfig15_18  fig15_18.cpp)
add_executable(prfig15_19  fig15_19.cpp)
add_executable(prfig15_20  fig15_20.cpp)
add_executable(prfig15_21  fig15_21.cpp)

# target_link_libraries(prfig15_01  PRIVATE   fmt::fmt )
# target_link_libraries(prfig15_02  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_03  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_04  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_05  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_06  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_07  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_08  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_09  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_10  PRIVATE   fmt::fmt )
# target_link_libraries(prfig15_11  PRIVATE   fmt::fmt )
# target_link_libraries(prfig15_12  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_13  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_14  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_15  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_16  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_17  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_18  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_19  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_20  PRIVATE   fmt::fmt )
target_link_libraries(prfig15_21  PRIVATE   fmt::fmt )
